[project]
name = "ttl-asr"
version = "0.1.0"
description = "Test-Time Learning for Automatic Speech Recognition (Whisper)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0,<2.7.0",
    "torchaudio>=2.0.0,<2.7.0",
    "transformers>=4.39.0",
    "peft>=0.10.0",
    "datasets>=2.16.0",
    "jiwer>=3.0.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "accelerate>=0.25.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
